--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.2.10",
