--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^3.25.0"
